Revert to Garamond for the 8" build

--- a/tex/p035.tex
+++ b/tex/p035.tex
@@ -88,7 +88,7 @@
 \vs p035 8:6 \ublistelem{3.}\bibnobreakspace \bibemph{Tertiary Lanonandeks.} This group contained 1,055,558. These Sons function as subordinate assistants, messengers, custodians, commissioners, observers, and prosecute the miscellaneous duties of a system and its component worlds.
 \vs p035 8:7 \pc It is not possible, as it is with evolutionary beings, for these Sons to progress from one group to another. When subjected to the Melchizedek training, when once tested and classified, they serve continuously in the rank assigned. Neither do these Sons engage in reproduction; their number in the universe is stationary.
 \vs p035 8:8 In round numbers the Lanonandek order of Sons is classified on Salvington as follows:
-\vs p035 8:9 \pc Universe Co\hyp{}ordinators and Constellation Counsellors\bibdf100,000
+\vs p035 8:9 \pc Universe Co\hyp{}ordinators and Constellation\tunemarkup{pgauraone}{\linebreak} Counsellors\bibdf100,000
 \vs p035 8:10 System Sovereigns and Assistants\bibdf600,000
 \vs p035 8:11 Planetary Princes and Reserves\bibdf10,000,000
 \vs p035 8:12 Messenger Corps\bibdf400,000
