--- a/tex/p038.tex
+++ b/tex/p038.tex
@@ -24,7 +24,7 @@
 \vs p038 2:5 \pc You do well to love them, but you should not adore them; angels are not objects of worship. The great seraphim, Loyalatia, when your seer\fnst{That is John Zebedee and the quote is from Revelation~22:8--9.} “fell down to worship before the feet of the angel,” said: “See that you do it not; I am a fellow servant with you and with your races, who are all enjoined to worship God.”
 \vs p038 2:6 In nature and personality endowment the seraphim are just a trifle ahead of mortal races in the scale of creature existence. Indeed, when you are delivered from the flesh, you become very much like them. On the mansion worlds you will begin to appreciate the seraphim, on the constellation spheres to enjoy them, while on Salvington they will share their places of rest and worship with you. Throughout the whole morontia and subsequent spirit ascent, your fraternity with the seraphim will be ideal; your companionship will be superb.
 \usection{Unrevealed Angels}
-\vs p038 3:1 Numerous orders of spirit beings function throughout the domains of the local universe that are unrevealed to mortals because they are in no manner connected with the evolutionary plan of Paradise ascension. In this paper the word “angel” is purposely limited to the designation of those seraphic and associated offspring of the Universe Mother Spirit who are so largely concerned with the operation of the plans of mortal survival. There serve in the local universe six other orders of related beings, the unrevealed angels, who are not in any specific manner connected with those universe activities pertaining to the Paradise ascent of evolutionary mortals. These six groups of angelic associates are never called seraphim, neither are they referred to as ministering spirits. These personalities are wholly occupied with the administrative and other affairs of Nebadon, engagements which are in no way related to man’s progressive career of spiritual ascent and perfection attainment.
+\vs p038 3:1 Numerous orders of spirit beings function\tunemarkup{pgauraone}{\linebreak} throughout the domains of the local universe that are unrevealed to mortals because they are in no manner connected with the evolutionary plan of Paradise ascension. In this paper the word “angel” is purposely limited to the designation of those seraphic and associated offspring of the Universe Mother Spirit who are so largely concerned with the operation of the plans of mortal survival. There serve in the local universe six other orders of related beings, the unrevealed angels, who are not in any specific manner connected with those universe activities pertaining to the Paradise ascent of evolutionary mortals. These six groups of angelic associates are never called seraphim, neither are they referred to as ministering spirits. These personalities are wholly occupied with the administrative and other affairs of Nebadon, engagements which are in no way related to man’s progressive career of spiritual ascent and perfection attainment.
 \usection{The Seraphic Worlds}
 \vs p038 4:1 The 9\ts{th} group of 7 primary spheres in the Salvington circuit are the worlds of the seraphim. Each of these worlds has 6 tributary satellites, whereon are the special schools devoted to all phases of seraphic training. While the seraphim have access to all 49 worlds comprising this group of Salvington spheres, they exclusively occupy only the 1\ts{st} cluster of 7. The remaining 6 clusters are occupied by the 6 orders of angelic associates unrevealed on Urantia; each such group maintains headquarters on one of these 6 primary worlds and carries on specialized activities on the 6 tributary satellites. Each angelic order has free access to all the worlds of these 7 diverse groups.
 \vs p038 4:2 These headquarters worlds are among the magnificent\tunemarkup{pgnexus10}{\linebreak} realms of Nebadon; the seraphic estates are characterized by both beauty and vastness. Here each seraphim has a real home, and “home” means the domicile of two seraphim; they live in pairs.
