--- a/tex/p059.tex
+++ b/tex/p059.tex
@@ -7,11 +7,11 @@
 \uminitoc{The Seed\hyp{}Plant Period}
 \author{Life Carrier}
 \vs p059 0:1 We reckon the history of Urantia as beginning about one billion years ago and extending through five major eras:
-\vs p059 0:2 \ublistelem{1.}\bibnobreakspace \bibemph{The prelife era} extends over the initial 450,000,000 years, from about the time the planet attained its present size to the time of life establishment. Your students have designated this period as the \bibemph{Archeozoic.}
+\vs p059 0:2 \ublistelem{1.}\bibnobreakspace \bibemph{The prelife era} extends over the initial\tunemarkup{pgauraone}{\linebreak} 450,000,000 years, from about the time the planet attained its present size to the time of life establishment. Your students have designated this period as the \bibemph{Archeozoic.}
 \vs p059 0:3 \ublistelem{2.}\bibnobreakspace \bibemph{The life\hyp{}dawn era} extends over the next 150,000,000 years. This epoch intervenes between the preceding prelife or cataclysmic age and the following period of more highly developed marine life. This era is known to your researchers as the \bibemph{Proterozoic.}
 \vs p059 0:4 \ublistelem{3.}\bibnobreakspace \bibemph{The marine\hyp{}life era} covers the next\tunemarkup{pgauraone}{\linebreak} 250,000,000 years and is best known to you as the \bibemph{Paleozoic.}
 \vs p059 0:5 \ublistelem{4.}\bibnobreakspace \bibemph{The early land\hyp{}life era} extends over the next 100,000,000 years and is known as the \bibemph{Mesozoic.}
-\vs p059 0:6 \ublistelem{5.}\bibnobreakspace \bibemph{The mammalian era} occupies the last 50,000,000 years. This recent\hyp{}times era is known as the \bibemph{Cenozoic.}
+\vs p059 0:6 \ublistelem{5.}\bibnobreakspace \bibemph{The mammalian era} occupies the last\tunemarkup{pgauraone}{\linebreak} 50,000,000 years. This recent\hyp{}times era is known as the \bibemph{Cenozoic.}
 \vs p059 0:7 \pc The marine\hyp{}life era thus covers about one quarter of your planetary history. It may be subdivided into 6 long periods, each characterized by certain well\hyp{}defined developments in both the geologic realms and the biologic domains.
 \vs p059 0:8 As this era begins, the sea bottoms, the extensive continental shelves, and the numerous shallow near\hyp{}shore basins are covered with prolific vegetation. The more simple and primitive forms of animal life have already developed from preceding vegetable organisms, and the early animal organisms have gradually made their way along the extensive coast lines of the various land masses until the many inland seas are teeming with primitive marine life. Since so few of these early organisms had shells, not many have been preserved as fossils. Nevertheless the stage is set for the opening chapters of that great “stone book” of the life\hyp{}record preservation which was so methodically laid down during the succeeding ages.
 \vs p059 0:9 The continent of North America is wonderfully rich in the fossil\hyp{}bearing deposits of the entire marine\hyp{}life era. The very first and oldest layers are separated from the later strata of the preceding period by extensive erosion deposits which clearly segregate these two stages of planetary development.
@@ -110,7 +110,7 @@
 \vs p059 6:1 This period marks the end of pivotal evolutionary development in marine life and the opening of the transition period leading to the subsequent ages of land animals.
 \vs p059 6:2 This age was one of great life impoverishment. Thousands of marine species perished, and life was hardly yet established on land. This was a time of biologic tribulation, the age when life nearly vanished from the face of the earth and from the depths of the oceans. Toward the close of the long marine\hyp{}life era there were more than 100,000 species of living things on earth. At the close of this period of transition less than 500 had survived.
 \vs p059 6:3 The peculiarities of this new period were not due so much to the cooling of the earth’s crust or to the long absence of volcanic action as to an unusual combination of commonplace and pre\hyp{}existing influences --- restrictions of the seas and increasing elevation of enormous land masses. The mild marine climate of former times was disappearing, and the harsher continental type of weather was fast developing.
-\vs p059 6:4 \pc \bibemph{170,000,000} years ago great evolutionary changes and adjustments were taking place over the entire face of the earth. Land was rising all over the world as the ocean beds were sinking. Isolated mountain ridges appeared. The eastern part of North America was high above the sea; the west was slowly rising. The continents were covered by great and small salt lakes and numerous inland seas which were connected with the oceans by narrow straits. The strata of this transition period vary in thickness from 300 to 2,130\,m.
+\vs p059 6:4 \pc \bibemph{170,000,000} years ago great evolutionary\tunemarkup{pgauraone}{\linebreak} changes and adjustments were taking place over the entire face of the earth. Land was rising all over the world as the ocean beds were sinking. Isolated mountain ridges appeared. The eastern part of North America was high above the sea; the west was slowly rising. The continents were covered by great and small salt lakes and numerous inland seas which were connected with the oceans by narrow straits. The strata of this transition period vary in thickness from 300 to 2,130\,m.
 \vs p059 6:5 The earth’s crust folded extensively during these land elevations. This was a time of continental emergence except for the disappearance of certain land bridges, including the continents which had so long connected South America with Africa and North America with Europe.
 \vs p059 6:6 Gradually the inland lakes and seas were drying up all over the world. Isolated mountain and regional glaciers began to appear, especially over the Southern Hemisphere, and in many regions the glacial deposit of these local ice formations may be found even among some of the upper and later coal deposits. Two new climatic factors appeared --- glaciation and aridity. Many of the earth’s higher regions had become arid and barren.
 \vs p059 6:7 \pc Throughout these times of climatic change, great variations also occurred in the land plants. The \bibemph{seed plants} first appeared, and they afforded a better food supply for the subsequently increased land\hyp{}animal life. The insects underwent a radical change. The \bibemph{resting stages} evolved to meet the demands of suspended animation during winter and drought.
