--- a/tex/p071.tex
+++ b/tex/p071.tex
@@ -92,7 +92,7 @@
 \vs p071 5:3 Throughout the earlier ages of any world, competition is essential to progressive civilization. As the evolution of man progresses, co\hyp{}operation becomes increasingly effective. In advanced civilizations co\hyp{}operation is more efficient than competition. Early man is stimulated by competition. Early evolution is characterized by the survival of the biologically fit, but later civilizations are the better promoted by intelligent co\hyp{}operation, understanding fraternity, and spiritual brotherhood.
 \vs p071 5:4 True, competition in industry is exceedingly wasteful and highly ineffective, but no attempt to eliminate this economic lost motion should be countenanced if such adjustments entail even the slightest abrogation of any of the basic liberties of the individual.
 \usection{The Profit Motive}
-\vs p071 6:1 Present\hyp{}day profit\hyp{}motivated economics is doomed unless profit motives can be augmented by service motives. Ruthless competition based on narrow\hyp{}minded self\hyp{}interest is ultimately destructive of even those things which it seeks to maintain. Exclusive and self\hyp{}serving profit motivation is incompatible with Christian ideals --- much more incompatible with the teachings of Jesus.
+\vs p071 6:1 Present\hyp{}day profit\hyp{}motivated economics is\tunemarkup{pgauraone}{\linebreak} doomed unless profit motives can be augmented by service motives. Ruthless competition based on narrow\hyp{}minded self\hyp{}interest is ultimately destructive of even those things which it seeks to maintain. Exclusive and self\hyp{}serving profit motivation is incompatible with Christian ideals --- much more incompatible with the teachings of Jesus.
 \vs p071 6:2 In economics, profit motivation is to service motivation what fear is to love in religion. But the profit motive must not be suddenly destroyed or removed; it keeps many otherwise slothful mortals hard at work. It is not necessary, however, that this social energy arouser be forever selfish in its objectives.
 \vs p071 6:3 The profit motive of economic activities is altogether base and wholly unworthy of an advanced order of society; nevertheless, it is an indispensable factor throughout the earlier phases of civilization. Profit motivation must not be taken away from men until they have firmly possessed themselves of superior types of nonprofit motives for economic striving and social serving --- the transcendent urges of superlative wisdom, intriguing brotherhood, and excellency of spiritual attainment.
 \usection{Education}
