--- a/tex/p073.tex
+++ b/tex/p073.tex
@@ -29,7 +29,7 @@
 \vs p073 3:2 The committee almost unanimously favoured the third selection. This site was chosen, and two years were occupied in transferring the world’s cultural headquarters, including the tree of life, to this Mediterranean peninsula. All but a single group of the peninsula dwellers peaceably vacated when Van and his company arrived.
 \vs p073 3:3 \pc This Mediterranean peninsula had a salubrious climate and an equable temperature; this stabilized weather was due to the encircling mountains and to the fact that this area was virtually an island in an inland sea. While it rained copiously on the surrounding highlands, it seldom rained in Eden proper. But each night, from the extensive network of artificial irrigation channels, a “mist would go up” to refresh the vegetation of the Garden.
 \vs p073 3:4 The coast line of this land mass was considerably elevated, and the neck connecting with the mainland was only 43\,km wide at the narrowest point. The great river that watered the Garden came down from the higher lands of the peninsula and flowed east through the peninsular neck to the mainland and thence across the lowlands of Mesopotamia to the sea beyond. It was fed by four tributaries which took origin in the coastal hills of the Edenic peninsula, and these are the “four heads” of the river which “went out of Eden,” and which later became confused with the branches of the rivers surrounding the second garden.
-\vs p073 3:5 The mountains surrounding the Garden abounded in precious stones and metals, though these received very little attention. The dominant idea was to be the glorification of horticulture and the exaltation of agriculture.
+\vs p073 3:5 The mountains surrounding the Garden\tunemarkup{pgauraone}{\linebreak} abounded in precious stones and metals, though these received very little attention. The dominant idea was to be the glorification of horticulture and the exaltation of agriculture.
 \vs p073 3:6 The site chosen for the Garden was probably the most beautiful spot of its kind in all the world, and the climate was then ideal. Nowhere else was there a location which could have lent itself so perfectly to becoming such a paradise of botanic expression. In this rendezvous the cream of the civilization of Urantia was forgathering. Without and beyond, the world lay in darkness, ignorance, and savagery. Eden was the one bright spot on Urantia; it was naturally a dream of loveliness, and it soon became a poem of exquisite and perfected landscape glory.
 \usection{Establishing the Garden}
 \vs p073 4:1 When Material Sons, the biologic uplifters, begin their sojourn on an evolutionary world, their place of abode is often called the Garden of Eden because it is characterized by the floral beauty and the botanic grandeur of Edentia, the constellation capital. Van well knew of these customs and accordingly provided that the entire peninsula be given over to the Garden. Pasturage and animal husbandry were projected for the adjoining mainland. Of animal life, only the birds and the various domesticated species were to be found in the park. Van’s instructions were that Eden was to be a garden, and only a garden. No animals were ever slaughtered within its precincts. All flesh eaten by the Garden workers throughout all the years of construction was brought in from the herds maintained under guard on the mainland.
