--- a/tex/p180.tex
+++ b/tex/p180.tex
@@ -31,7 +31,7 @@
 \vs p180 3:4 “Let not your hearts be troubled. You believe in God; continue to believe also in me. Even though I must leave you, I will not be far from you. I have already told you that in my Father’s universe there are many tarrying\hyp{}places. If this were not true, I would not have repeatedly told you about them. I am going to return to these worlds of light, stations in the Father’s heaven to which you shall sometime ascend. From these places I came into this world, and the hour is now at hand when I must return to my Father’s work in the spheres on high.
 \vs p180 3:5 \textcolour{ubdarkred}{“If I thus go before you into the Father’s heavenly kingdom, so will I surely send for you that you may be with me in the places that were prepared for the mortal sons of God before this world was. Even though I must leave you, I will be present with you in spirit, and eventually you shall be with me in person when you have ascended to me in my universe even as I am about to ascend to my Father in his greater universe. And what I have told you is true and everlasting, even though you may not fully comprehend it. I go to the Father, and though you cannot now follow me, you shall certainly follow me in the ages to come.”}
 \vs p180 3:6 When Jesus sat down, Thomas arose and said: “Master, we do not know where you are going; so of course we do not know the way. But we will follow you this very night if you will show us the way.”
-\vs p180 3:7 When Jesus heard Thomas, he answered: \textcolour{ubdarkred}{“Thomas, I am the way, the truth, and the life. No man goes to the Father except through me. All who find the Father, first find me. If you know me, you know the way to the Father. And you do know me, for you have lived with me and you now see me.”}
+\vs p180 3:7 When Jesus heard Thomas, he answered:\tunemarkup{pgauraone}{\linebreak} \textcolour{ubdarkred}{“Thomas, I am the way, the truth, and the life. No man goes to the Father except through me. All who find the Father, first find me. If you know me, you know the way to the Father. And you do know me, for you have lived with me and you now see me.”}
 \vs p180 3:8 But this teaching was too deep for many of the apostles, especially for Philip, who, after speaking a few words with Nathaniel, arose and said: “Master, show us the Father, and everything you have said will be made plain.”
 \vs p180 3:9 And when Philip had spoken, Jesus said: \textcolour{ubdarkred}{“Philip, have I been so long with you and yet you do not even now know me? Again do I declare: He who has seen me has seen the Father. How can you then say, Show us the Father? Do you not believe that I am in the Father and the Father in me? Have I not taught you that the words which I speak are not my words but the words of the Father? I speak for the Father and not of myself. I am in this world to do the Father’s will, and that I have done. My Father abides in me and works through me. Believe me when I say that the Father is in me, and that I am in the Father, or else believe me for the sake of the very life I have lived --- for the work’s sake.”}
 \vs p180 3:10 As the Master went aside to refresh himself with water, the 11 engaged in a spirited discussion of these teachings, and Peter was beginning to deliver himself of an extended speech when Jesus returned and beckoned them to be seated.
