--- a/tex/urantia-hyphen-en.tex
+++ b/tex/urantia-hyphen-en.tex
@@ -1,4 +1,12 @@
 \hyphenation{%
+No-ah
+pro-phet
+pro-phet-ic
+sun-spot
+sun-spots
+mel-o-dy
+mel-o-dies
+sa-no-bim
 se-mi-sav-age
 se-mi-sav-ages
 sav-age
