--- a/tex/1Ch.tex
+++ b/tex/1Ch.tex
@@ -1,7 +1,7 @@
 \bibbook{the first book of the\\\bibtitlemain{chronicles}}{i. chronicles}{I Chronicles}{1Ch}
 \vs 1Ch 1:1 Adam, Sheth, Enosh,
 \vs 1Ch 1:2 Kenan, Mahalaleel, Jered,
-\vs 1Ch 1:3 Henoch, Methuselah, Lamech,
+\vs 1Ch 1:3 Henoch, Methuselah, Lamech,\tunemarkup{pgauraone}{\linebreak}
 \vs 1Ch 1:4 Noah, Shem, Ham, and Japheth.
 \vs 1Ch 1:5 The sons of Japheth; Gomer, and Magog, and Madai, and Javan, and Tubal, and Meshech, and Tiras.
 \vs 1Ch 1:6 And the sons of Gomer; Ashchenaz, and Riphath, and Togarmah.
