--- a/tex/p030.tex
+++ b/tex/p030.tex
@@ -331,7 +331,7 @@
 \end{quote}
 \vs p030 2:129 \pc This is the working classification of the personalities of the universes as they are of record on the headquarters world of Uversa.
 \vsetspace
-\vs p030 2:130 \pc\tunemarkup{pgauraone}{\kern-4pt}\tunemarkup{pgkoboaurahd}{\kern-4pt} \bibemph{COMPOSITE PERSONALITY GROUPS.} There are on Uversa the records of numerous additional groups of intelligent beings, beings that are also closely related to the organization and administration of the grand universe. Among such orders are the following three composite personality groups:
+\vs p030 2:130 \pc\tunemarkup{pgkoboaurahd}{\kern-4pt} \bibemph{COMPOSITE PERSONALITY GROUPS.}\tunemarkup{pgauraone}{\linebreak} There are on Uversa the records of numerous additional groups of intelligent beings, beings that are also closely related to the organization and administration of the grand universe. Among such orders are the following three composite personality groups:
 \vsetspace
 \vs p030 2:131 \ublistelem{A.}\bibnobreakspace \bibemph{The Paradise Corps of the Finality.}
 \begin{quote}
