--- a/tex/p023.tex
+++ b/tex/p023.tex
@@ -39,13 +39,13 @@
 \vs p023 2:19 \ublistelem{5.}\bibnobreakspace \bibemph{Explorers of Undirected Assignment.} When the reserve corps of the Solitary Messengers is overrecruited, there issues from one of the Seven Supreme Power Directors a call for exploration volunteers; and there is never a lack of volunteers, for they delight to be dispatched as free and untrammelled explorers, to experience the thrill of finding the organizing nucleuses of new worlds and universes.
 \vs p023 2:20 They go forth to investigate the clues furnished by the space contemplators of the realms. Undoubtedly the Paradise Deities know of the existence of these undiscovered energy systems of space, but they never divulge such information. If the Solitary Messengers did not explore and chart these newly organizing energy centres, such phenomena would long remain unnoticed even by the intelligences of adjacent realms. Solitary Messengers, as a class, are highly sensitive to gravity; accordingly they can sometimes detect the probable presence of very small dark planets, the very worlds which are best adapted to life experiments.
 \vs p023 2:21 These messenger\hyp{}explorers of undirected assignment patrol the master universe. They are constantly out on exploring expeditions to the uncharted regions of all outer space. Very much of the information which we possess of transactions in the realms of outer space, we owe to the explorations of the Solitary Messengers as they often work and study with the celestial astronomers.
-\vs p023 2:22 \ublistelem{6.}\bibnobreakspace \bibemph{Ambassadors and Emissaries of Special Assignment.} Local universes situated within the same superuniverse customarily exchange ambassadors selected from their native orders of sonship. But to avoid delay, Solitary Messengers are frequently asked to go as ambassadors from one local creation to another, to represent and interpret one realm to another. For example: When a newly inhabited realm is discovered, it may prove to be so remote in space that a long time will pass before an enseraphimed ambassador can reach this far\hyp{}distant universe. An enseraphimed being cannot possibly exceed the velocity of 899,366 Urantia kilometres in one second of your time. Massive stars, crosscurrents, and detours, as well as attraction tangents, will all tend to retard such speed so that on a long journey the velocity will average about 885,139 km/s.
+\vs p023 2:22 \ublistelem{6.}\bibnobreakspace \bibemph{Ambassadors and Emissaries of Special Assignment.} Local universes situated within the same superuniverse customarily exchange ambassadors selected from their native orders of sonship. But to avoid delay, Solitary Messengers are frequently asked to go as ambassadors from one local creation to another, to represent and interpret one realm to another. For example: When a newly inhabited realm is discovered, it may prove to be so remote in space that a long time will pass before an enseraphimed ambassador can reach this far\hyp{}distant universe. An enseraphimed being cannot possibly exceed the velocity of 899,366 Urantia kilometres in one second of your time. Massive stars, crosscurrents, and detours, as well as attraction tangents, will all tend to retard such speed so that on a long journey the velocity will average about 885,139\,km/s.
 \vs p023 2:23 When it develops that it will require hundreds of years for a native ambassador to reach a far\hyp{}distant local universe, a Solitary Messenger is often asked to proceed there immediately to act as ambassador ad interim. Solitary Messengers can go in very short order, not independently of time and space as do the Gravity Messengers, but nearly so. They also serve in other circumstances as emissaries of special assignment.
 \vs p023 2:24 \ublistelem{7.}\bibnobreakspace \bibemph{Revelators of Truth.} The Solitary Messengers regard the assignment to reveal truth as the highest trust of their order. And they function ever and anon in this capacity, from the superuniverses to the individual planets of space. They are frequently attached to commissions which are sent to enlarge the revelation of truth to the worlds and systems.
 \usection{Time and Space Services of Solitary Messengers}
 \vs p023 3:1 The Solitary Messengers are the highest type of perfect and confidential personality available in all realms for the quick transmission of important and urgent messages when it is inexpedient to utilize either the broadcast service or the reflectivity mechanism. They serve in an endless variety of assignments, helping out the spiritual and material beings of the realms, particularly where the element of time is involved. Of all orders assigned to the services of the superuniverse domains, they are the highest and most versatile personalized beings who can come so near to defying time and space.
-\vs p023 3:2 \pc The universe is well supplied with spirits who utilize gravity for purposes of transit; they can go anywhere any time --- instanter --- but they are not persons. Certain other gravity traversers are personal beings, such as Gravity Messengers and Transcendental Recorders, but they are not available to the super\hyp{} and the local universe administrators. The worlds teem with angels and men and other highly personal beings, but they are handicapped by time and space: The limit of velocity for most nonenseraphimed beings is 299,789 kilometres of your world per second of your time\fnst{Note that the speed of light is \bibemph{exactly} 299,792,458 m/s. The original American text says ``186,280 miles of your world per second of your time'', which is somewhat lower than the value 299,796$\pm 4$\,km/s measured in 1926 by Albert Michelson.}; the midway creatures and certain others can, often do, attain double velocity --- 599,577 km/s --- while the seraphim and others can traverse space at triple velocity, about 899,367 km/s\fnst{I have worked out the mathematical details of a possibility of travelling faster than the speed of light by interpreting the fifth dimension of Kaluza's ``unified field theory of gravitation and electromagnetism'' as \bibemph{proper time} $\tau$ and the momentum conjugated to it (the total phase space being the cotangent bundle over a 5-dimensional Lorentzian manifold $\mathcal{M}$ of signature $(-,+,+,+,+)$) as \bibemph{rest mass} $m$: $x^{\mu} = (t,\mathbf{r},\tau), p_{\mu}=(E,\mathbf{p},m)$, thus explicitly manifesting the geometric nature of rest mass (as opposed to it being an \bibemph{inherent constant parameter}). Therefore, the ordinary 4-dimensional mass shell constraint $E^2 = \mathbf{p}^2 + m^2, g(p,p) + m^2 = 0$ appears as nothing but the restriction on all matter being supported on the ``lightlike cone in 5-dimensions'': $G(p,p)=0$, where $g$ and $G$ are 4d and 5d metric tensors respectively. Thus, all energy is ``lightlike'' in 5 dimensions, but as this ``lightlike energy'' undergoes slowing down, it manifests itself (i.e. its projection to a 4-dimensional spacetime submanifold) as a normal ``massive material energy''. In such interpretation of Kaluza's fifth dimension there is no need whatsoever for Klein's constraint of $S^1$-compactification thereof. Moreover, it is easily seen that the modern offshoots of Kaluza-Klein model (superstring theories, etc.), which impose such constraints are nothing more than the special cases of \bibemph{monstrous} situations of energy somehow locked in a loop of time\hyp{}perception. Our ``normal'' perception of time is linear (and has a topology of a closed interval $[a,b] \subset \mathbb{R}^1$) and no such compactification constraints are demanded. Note, further, that the velocity in the fifth dimension (as measured with respect to the coordinate time $t$) is extremely high for slow movements in purely spatial dimension: $d\tau/dt=\sqrt{1 - v^2}$. Hence, if we can imagine a surface capable of reflecting the momentum in $\tau$-dimension (thus causing \bibemph{dematerialization}, i.e. passing through the point $m=0$ in the phase space) into one of the purely spatial dimensions (just like an ordinary elastic collision at an angle of 45° causes a reflection of, say $p_x$ momentum component into $p_y$), we would expect by the law of conservation of 5-momentum the corresponding spatial momentum to be likewise extremely high, even equal to that of light if the process begins from purely spatial rest ($\mathbf{p}=0$). And, having crossed ``the light barrier'', there is then nothing peculiar about accelerating to an even higher speed, this being permitted even by such limited treatment of the material reality as Einstein's Special Relativity theory in four dimensions. The surface itself would have to be immovable in (coordinate) time, such as the Isle of Paradise, which we are told is reachable from any point in space by moving inward, the Paradise itself remaining outside space and time. This implies that superluminal travel is possible from any point in space, but some sort of contact with the Isle of Paradise or other such ``surface immovable in time'' (or some other dematerialization technique) is required --- and this is apparently facilitated by the transport seraphim.}. There are, however, no transit or messenger personalities who function between the instantaneous velocities of the gravity traversers and the comparatively slow speeds of the seraphim, except the Solitary Messengers.
-\vs p023 3:3 Solitary Messengers are, therefore, generally used for dispatch and service in those situations where personality is essential to the achievement of the assignment, and where it is desired to avoid the loss of time which would be occasioned by the sending of any other readily available type of personal messenger. They are the only definitely personalized beings who can synchronize with the combined universal currents of the grand universe. Their velocity in traversing space is variable, depending on a great variety of interfering influences, but the record shows that on the journey to fulfil this mission my associate messenger proceeded at the rate of 1,354,458,739,823 km/s.
+\vs p023 3:2 \pc The universe is well supplied with spirits who utilize gravity for purposes of transit; they can go anywhere any time --- instanter --- but they are not persons. Certain other gravity traversers are personal beings, such as Gravity Messengers and Transcendental Recorders, but they are not available to the super\hyp{} and the local universe administrators. The worlds teem with angels and men and other highly personal beings, but they are handicapped by time and space: The limit of velocity for most nonenseraphimed beings is 299,789 kilometres of your world per second of your time\fnst{Note that the speed of light is \bibemph{exactly} 299,792,458 m/s. The original American text says ``186,280 miles of your world per second of your time'', which is somewhat lower than the value 299,796$\pm 4$\,km/s measured in 1926 by Albert Michelson.}; the midway creatures and certain others can, often do, attain double velocity --- 599,577\,km/s --- while the seraphim and others can traverse space at triple velocity, about 899,367\,km/s\fnst{The mathematical details of a possibility of travelling faster than the speed of light is suggested by interpreting the fifth dimension of Kaluza's ``unified field theory of gravitation and electromagnetism'' as \bibemph{proper time} $\tau$ and the momentum conjugated to it (the total phase space being the cotangent bundle over a 5-dimensional Lorentzian manifold $\mathcal{M}$ of signature $(-,+,+,+,+)$) as \bibemph{rest mass} $m$: $x^{\mu} = (t,\mathbf{r},\tau), p_{\mu}=(E,\mathbf{p},m)$, thus explicitly manifesting the geometric nature of rest mass (as opposed to it being an \bibemph{inherent constant parameter}). Therefore, the ordinary 4-dimensional mass shell constraint $E^2 = \mathbf{p}^2 + m^2, g(p,p) + m^2 = 0$ appears as nothing but the restriction on all matter being supported on the ``lightlike cone in 5-dimensions'': $G(p,p)=0$, where $g$ and $G$ are 4d and 5d metric tensors respectively. Thus, all energy is ``lightlike'' in 5 dimensions, but as this ``lightlike energy'' undergoes slowing down, it manifests itself (i.e. its projection to a 4-dimensional spacetime submanifold) as a normal ``massive material energy''. In such interpretation of Kaluza's fifth dimension there is no need whatsoever for Klein's constraint of $S^1$-compactification thereof. Moreover, it is easily seen that the modern offshoots of Kaluza-Klein model (superstring theories, etc.), which impose such constraints are nothing more than the special cases of \bibemph{monstrous} situations of energy somehow locked in a loop of time\hyp{}perception. Our ``normal'' perception of time is linear (and has a topology of a closed interval $[a,b] \subset \mathbb{R}^1$) and no such compactification constraints are demanded. Note, further, that the velocity in the fifth dimension (as measured with respect to the coordinate time $t$) is extremely high for slow movements in purely spatial dimension: $d\tau/dt=\sqrt{1 - v^2}$. Hence, if we can imagine a surface capable of reflecting the momentum in $\tau$-dimension (thus causing \bibemph{dematerialization}, i.e. passing through the point $m=0$ in the phase space) into one of the purely spatial dimensions (just like an ordinary elastic collision at an angle of 45° causes a reflection of, say $p_x$ momentum component into $p_y$), we would expect by the law of conservation of 5-momentum the corresponding spatial momentum to be likewise extremely high, even equal to that of light if the process begins from purely spatial rest ($\mathbf{p}=0$). And, having crossed ``the light barrier'', there is then nothing peculiar about accelerating to an even higher speed, this being permitted even by such limited treatment of the material reality as Einstein's Special Relativity theory in four dimensions. The surface itself would have to be immovable in (coordinate) time, such as the Isle of Paradise, which we are told is reachable from any point in space by moving inward, the Paradise itself remaining outside space and time. This implies that superluminal travel is possible from any point in space, but some sort of contact with the Isle of Paradise or other such ``surface immovable in time'' (or some other dematerialization technique) is required --- and this is apparently facilitated by the transport seraphim.}. There are, however, no transit or messenger personalities who function between the instantaneous velocities of the gravity traversers and the comparatively slow speeds of the seraphim, except the Solitary Messengers.
+\vs p023 3:3 Solitary Messengers are, therefore, generally used for dispatch and service in those situations where personality is essential to the achievement of the assignment, and where it is desired to avoid the loss of time which would be occasioned by the sending of any other readily available type of personal messenger. They are the only definitely personalized beings who can synchronize with the combined universal currents of the grand universe. Their velocity in traversing space is variable, depending on a great variety of interfering influences, but the record shows that on the journey to fulfil this mission my associate messenger proceeded at the rate of 1,354,458,739,823\,km/s.
 \vs p023 3:4 It is wholly beyond my ability to explain to the material type of mind how a spirit can be a real person and at the same time traverse space at such tremendous velocities. But these very Solitary Messengers actually come to, and go from, Urantia at these incomprehensible speeds; indeed, the whole economy of universal administration would be largely deprived of its personal element were this not a fact.
 \vs p023 3:5 \pc The Solitary Messengers are able to function as emergency lines of communication throughout remote space regions, realms not embraced within the established circuits of the grand universe. It develops that one messenger, when so functioning, can transmit a message or send an impulse through space to a fellow messenger about 100 light\hyp{}years away as Urantia astronomers estimate stellar distances.
 \vs p023 3:6 Of the myriads of beings who co\hyp{}operate with us in the conduct of the affairs of the superuniverse, none are more important in practical helpfulness and timesaving assistance. In the universes of space we must reckon with the handicaps of time; hence the great service of the Solitary Messengers, who, by means of their personal prerogatives of communication, are somewhat independent of space and, by virtue of their tremendous transit velocities, are so nearly independent of time.
