Fix the space before "km/s"

--- a/tex/p012.tex
+++ b/tex/p012.tex
@@ -63,7 +63,7 @@
 \vs p012 4:11 \ublistelem{4.}\bibnobreakspace Compensatory or correlating movement designed to co\hyp{}ordinate all other motions.
 \vs p012 4:12 \pc The present relationship of your sun and its associated planets, while disclosing many relative and absolute motions in space, tends to convey the impression to astronomic observers that you are comparatively stationary in space, and that the surrounding starry clusters and streams are engaged in outward flight at ever\hyp{}increasing velocities as your calculations proceed outward in space. But such is not the case. You fail to recognize the present outward and uniform expansion of the physical creations of all pervaded space. Your own local creation (Nebadon) participates in this movement of universal outward expansion. The entire seven superuniverses participate in the two\hyp{}billion\hyp{}year cycles of space respiration along with the outer regions of the master universe.
 \vs p012 4:13 When the universes expand and contract, the material masses in pervaded space alternately move against and with the pull of Paradise gravity. The work that is done in moving the material energy mass of creation is \bibemph{space} work but not \bibemph{power\hyp{}energy} work.
-\vs p012 4:14 \pc Although your spectroscopic estimations of astronomic velocities are fairly reliable when applied to the starry realms belonging to your superuniverse and its associate superuniverses, such reckonings with reference to the realms of outer space are wholly unreliable. Spectral lines are displaced from the normal towards the violet by an approaching star; likewise these lines are displaced towards the red by a receding star. Many influences interpose to make it appear that the recessional velocity of the external universes increases at the rate of more than 160 km/s for every 1,000,000 light\hyp{}years\fnst{The value of Hubble constant given in the text (522\,km/s/Mpc) is very close to the value obtained by Hubble himself in 1935: 535\,km/s/Mpc. Hubble's calculations were based on the dependence between the period and luminosity of variable stars called Cepheids. The revision of the base point of this dependence by W.~Baade in 1952 led to the significant correction of the value of Hubble's constant. By 1955 the accepted value became 180\,km/s/Mpc and the modern (2016) value is even smaller: 6,93$\pm$0,62\,km/s/Mpc.} increase in distance. By this method of reckoning, subsequent to the perfection of more powerful telescopes, it will appear that these far\hyp{}distant systems are in flight from this part of the universe at the unbelievable rate of more than 48,000 km/s. But this apparent speed of recession is not real; it results from numerous factors of error embracing angles of observation and other time\hyp{}space distortions.
+\vs p012 4:14 \pc Although your spectroscopic estimations of astronomic velocities are fairly reliable when applied to the starry realms belonging to your superuniverse and its associate superuniverses, such reckonings with reference to the realms of outer space are wholly unreliable. Spectral lines are displaced from the normal towards the violet by an approaching star; likewise these lines are displaced towards the red by a receding star. Many influences interpose to make it appear that the recessional velocity of the external universes increases at the rate of more than 160\,km/s for every 1,000,000 light\hyp{}years\fnst{The value of Hubble constant given in the text (522\,km/s/Mpc) is very close to the value obtained by Hubble himself in 1935: 535\,km/s/Mpc. Hubble's calculations were based on the dependence between the period and luminosity of variable stars called Cepheids. The revision of the base point of this dependence by W.~Baade in 1952 led to the significant correction of the value of Hubble's constant. By 1955 the accepted value became 180\,km/s/Mpc and the modern (2016) value is even smaller: 6,93$\pm$0,62\,km/s/Mpc.} increase in distance. By this method of reckoning, subsequent to the perfection of more powerful telescopes, it will appear that these far\hyp{}distant systems are in flight from this part of the universe at the unbelievable rate of more than 48,000\,km/s. But this apparent speed of recession is not real; it results from numerous factors of error embracing angles of observation and other time\hyp{}space distortions.
 \vs p012 4:15 But the greatest of all such distortions arises because the vast universes of outer space, in the realms\fnst{In 1955 text no comma after ``space''.} next to the domains of the seven superuniverses, seem to be revolving in a direction opposite to that of the grand universe. That is, these myriads of nebulae and their accompanying suns and spheres are at the present time revolving clockwise about the central creation. The seven superuniverses revolve about Paradise in a counterclockwise direction. It appears that the second outer universe of galaxies, like the seven superuniverses, revolves counterclockwise about Paradise. And the astronomic observers of Uversa think they detect evidence of revolutionary movements in a third outer belt of far\hyp{}distant space which are beginning to exhibit directional tendencies of a clockwise nature.
 \vs p012 4:16 It is probable that these alternate directions of successive space processions of the universes have something to do with the intramaster universe gravity technique of the Universal Absolute, which consists of a co\hyp{}ordination of forces and an equalization of space tensions. Motion as well as space is a complement or equilibrant of gravity.
 \usection{Space and Time}
