--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -106,7 +106,7 @@
 \usection{Atomic Matter}
 \vs p042 7:1 The formation of all matter is on the order of the solar system. There is at the centre of every minute universe of energy a relatively stable, comparatively stationary, nuclear portion of material existence. This central unit is endowed with a threefold possibility of manifestation. Surrounding this energy centre there whirl, in endless profusion but in fluctuating circuits, the energy units which are faintly comparable to the planets encircling the sun of some starry group like your own solar system.
 \vs p042 7:2 \pc Within the atom the electrons revolve about the central proton with about the same comparative room the planets have as they revolve about the sun in the space of the solar system. There is the same relative distance, in comparison with actual size, between the atomic nucleus and the inner electronic circuit as exists between the inner planet, Mercury,\index{Planets!Mercury} and your sun.
-\vs p042 7:3 The electronic axial revolutions and their orbital velocities about the atomic nucleus are both beyond the human imagination, not to mention the velocities of their component ultimatons. The positive particles of radium fly off into space at the rate of 16,000 km/s, while the negative particles attain a velocity approximating that of light.
+\vs p042 7:3 The electronic axial revolutions and their orbital velocities about the atomic nucleus are both beyond the human imagination, not to mention the velocities of their component ultimatons. The positive particles of radium fly off into space at the rate of 16,000\,km/s, while the negative particles attain a velocity approximating that of light.
 \vs p042 7:4 \pc The local universes are of decimal construction. There are just 100 distinguishable atomic materializations of space\hyp{}energy in a dual universe; that is the maximum possible organization of matter in Nebadon. These 100 forms of matter consist of a regular series in which from 1 to 100 electrons revolve around a central and relatively compact nucleus. It is this orderly and dependable association of various energies that constitutes matter.
 \vs p042 7:5 Not every world will show 100 recognizable elements at the surface, but they are somewhere present, have been present, or are in process of evolution. Conditions surrounding the origin and subsequent evolution of a planet determine how many of the 100 atomic types will be observable. The heavier atoms are not found on the surface of many worlds. Even on Urantia the known heavier elements manifest a tendency to fly to pieces, as is illustrated by radium behaviour.
 \vs p042 7:6 Stability of the atom depends on the number of electrically inactive neutrons in the central body. Chemical behaviour is wholly dependent on the activity of the freely revolving electrons.
