--- a/tex/p049.tex
+++ b/tex/p049.tex
@@ -49,7 +49,7 @@
 \usection{Worlds of the Nonbreathers}
 \vs p049 3:1 The majority of inhabited planets are peopled with the breathing type of intelligent beings. But there are also orders of mortals who are able to live on worlds with little or no air. Of the Orvonton inhabited worlds this type amounts to less than 7\%. In Nebadon this percentage is less than 3. In all Satania there are only 9 such worlds.
 \vs p049 3:2 There are so very few of the nonbreather type of inhabited worlds in Satania because this more recently organized section of Norlatiadek still abounds in meteoric space bodies; and worlds without a protective friction atmosphere are subject to incessant bombardment by these wanderers. Even some of the comets consist of meteor swarms, but as a rule they are disrupted smaller bodies of matter.
-\vs p049 3:3 Millions upon millions of meteorites enter the atmosphere of Urantia daily, coming in at the rate of almost 320 km/s. On the nonbreathing worlds the advanced races must do much to protect themselves from meteor damage by making electrical installations which operate to consume or shunt the meteors. Great danger confronts them when they venture beyond these protected zones. These worlds are also subject to disastrous electrical storms of a nature unknown on Urantia. During such times of tremendous energy fluctuation the inhabitants must take refuge in their special structures of protective insulation.
+\vs p049 3:3 Millions upon millions of meteorites enter the atmosphere of Urantia daily, coming in at the rate of almost 320\,km/s. On the nonbreathing worlds the advanced races must do much to protect themselves from meteor damage by making electrical installations which operate to consume or shunt the meteors. Great danger confronts them when they venture beyond these protected zones. These worlds are also subject to disastrous electrical storms of a nature unknown on Urantia. During such times of tremendous energy fluctuation the inhabitants must take refuge in their special structures of protective insulation.
 \vs p049 3:4 Life on the worlds of the nonbreathers is radically different from what it is on Urantia. The nonbreathers do not eat food or drink water as do the Urantia races. The reactions of the nervous system, the heat\hyp{}regulating mechanism, and the metabolism of these specialized peoples are radically different from such functions of Urantia mortals. Almost every act of living, aside from reproduction, differs, and even the methods of procreation are somewhat different.
 \vs p049 3:5 On the nonbreathing worlds the animal species are radically unlike those found on the atmospheric planets. The nonbreathing plan of life varies from the technique of existence on an atmospheric world; even in survival their peoples differ, being candidates for Spirit fusion. Nevertheless, these beings enjoy life and carry forward the activities of the realm with the same relative trials and joys that are experienced by the mortals living on atmospheric worlds. In mind and character the nonbreathers do not differ from other mortal types.
 \vs p049 3:6 You would be more than interested in the planetary conduct of this type of mortal because such a race of beings inhabits a sphere in close proximity to Urantia.
