--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -78,7 +78,7 @@
 \vs p042 4:13 \pc The relative integrity of matter is assured by the fact that energy can be absorbed or released only in those exact amounts which Urantia scientists have designated quanta. This wise provision in the material realms serves to maintain the universes as going concerns.
 \vs p042 4:14 The quantity of energy taken in or given out when electronic or other positions are shifted is always a “quantum” or some multiple thereof, but the vibratory or wavelike behaviour of such units of energy is wholly determined by the dimensions of the material structures concerned. Such wavelike energy ripples are 860\fnst{This ``magic number'' is explained by Sir James Jeans in his book ``The Universe Around Us'' (1930, p.138) as follows: the energy needed to separate two charges $+e$ and $-e$ at a distance $r$ is $e^2/(4\pi\epsilon_0 r)$; equating it to the energy of photon $h\nu$ we have $h\nu=hc/\lambda = e^2/(4\pi\epsilon_0 r)$, whence we obtain $\lambda/r = 4\pi\epsilon_0 hc/e^2 \approx 861.02$.} times the diameters of the ultimatons, electrons, atoms, or other units thus performing. The never\hyp{}ending confusion attending the observation of the wave mechanics of quantum behaviour is due to the superimposition of energy waves: Two crests can combine to make a double\hyp{}height crest, while a crest and a trough may combine, thus producing mutual cancellation.
 \usection{Wave\hyp{}Energy Manifestations}
-\vs p042 5:1 In the superuniverse of Orvonton there are 100 octaves of wave energy. Of these 100 groups of energy manifestations, 64 are wholly or partially recognized on Urantia. The sun’s rays constitute 4 octaves in the superuniverse scale, the visible rays embracing a single octave, number 46\fnst{The wavelength of the visible light ranges between 400\,nm and 780\,nm, therefore the base frequency used for calibrating the spectrum is 11\,Hz: $\nu_{max}(n) = 11 \times 2^n$, where $\nu_{max}$ is the top frequency (in Hz) of the $n^{th}$ octave.} in this series. The ultraviolet group comes next, while 10 octaves up are the X\hyp{}rays, followed by the γ-rays\fnst{In 1955 text ``Y rays''.} of radium. 32 octaves above the visible light of the sun are the outer\hyp{}space energy rays so frequently commingled with their associated highly energized minute particles of matter. Next downward from visible sunlight appear the infrared rays, and 30 octaves below are the radio transmission group.
+\vs p042 5:1 In the superuniverse of Orvonton there are 100 octaves of wave energy. Of these 100 groups of energy manifestations, 64 are wholly or partially recognized on Urantia. The sun’s rays constitute 4 octaves in the superuniverse scale, the visible rays embracing a single octave, number 46\fnst{The wavelength of the visible light ranges between 400\,nm and 780\,nm, therefore the base frequency used for calibrating the spectrum is 11\,Hz: $\nu_{max}(n) = 11 \times 2^n$, where $\nu_{max}$ is the top frequency (in Hz) of the $n^{th}$ octave.} in this series. The ultraviolet group comes next, while 10 octaves up are the X\hyp{}rays, followed by the $\gamma$\hyp{}rays\fnst{In 1955 text ``Y rays''.} of radium. 32 octaves above the visible light of the sun are the outer\hyp{}space energy rays so frequently commingled with their associated highly energized minute particles of matter. Next downward from visible sunlight appear the infrared rays, and 30 octaves below are the radio transmission group.
 \vs p042 5:2 \pc Wavelike energy manifestations --- from the standpoint of XX century Urantia scientific enlightenment --- may be classified into the following 10 groups:
 \vs p042 5:3 \ublistelem{1.}\bibnobreakspace \bibemph{Infraultimatonic rays ---} the borderland revolutions of ultimatons as they begin to assume definite form. This is the 1\ts{st} stage of emergent energy in which wavelike phenomena can be detected and measured.
 \vs p042 5:4 \ublistelem{2.}\bibnobreakspace \bibemph{Ultimatonic rays.} The assembly of energy into the minute spheres of the ultimatons occasions vibrations in the content of space which are discernible and measurable. And long before physicists ever discover the ultimaton, they will undoubtedly detect the phenomena of these rays as they shower in upon Urantia. These short and powerful rays represent the initial activity of the ultimatons as they are slowed down to that point where they veer towards the electronic organization of matter. As the ultimatons aggregate into electrons, condensation occurs with a consequent storage of energy.
@@ -110,7 +110,7 @@
 \vs p042 7:4 \pc The local universes are of decimal construction. There are just 100 distinguishable atomic materializations of space\hyp{}energy in a dual universe; that is the maximum possible organization of matter in Nebadon. These 100 forms of matter consist of a regular series in which from 1 to 100 electrons revolve around a central and relatively compact nucleus. It is this orderly and dependable association of various energies that constitutes matter.
 \vs p042 7:5 Not every world will show 100 recognizable elements at the surface, but they are somewhere present, have been present, or are in process of evolution. Conditions surrounding the origin and subsequent evolution of a planet determine how many of the 100 atomic types will be observable. The heavier atoms are not found on the surface of many worlds. Even on Urantia the known heavier elements manifest a tendency to fly to pieces, as is illustrated by radium behaviour.
 \vs p042 7:6 Stability of the atom depends on the number of electrically inactive neutrons in the central body. Chemical behaviour is wholly dependent on the activity of the freely revolving electrons.
-\vs p042 7:7 \pc In Orvonton it has never been possible naturally to assemble over 100 orbital electrons in one atomic system. When 101 have been artificially introduced into the orbital field, the result has always been the instantaneous disruption of the central proton with the wild dispersion of the electrons and other liberated energies.
+\vs p042 7:7 \pc In Orvonton it has never been possible naturally to assemble over 100 orbital electrons in one atomic system\fnst{Modern relativistic quantum mechanics associates the maximum number of electrons in an atomic system with the reciprocal fine structure constant ${1/\alpha}=\hbar c/e^2\approx137$. In 1952 (\cite{Dyson1952}) F.J.~Dyson argued that $1/\alpha$ was the greatest number of electrons that could subsist in an atom, because if $n$ electrons are constrained to remain within a sphere of Compton wavelength diameter $\hbar/mc$, then their total Coulomb potential energy becomes ${n e^2\over{\hbar/2 m c}}=2n\alpha m c^2$. If this value exceeds twice the amount of rest energy of an electron ($2 m c^2$), then pair creation could occur and so the number of particles $n$ becomes undefined~--- hence the condition $n<1/\alpha$.}. When 101 have been artificially introduced into the orbital field, the result has always been the instantaneous disruption of the central proton with the wild dispersion of the electrons and other liberated energies.
 \vs p042 7:8 \pc While atoms may contain from 1 to 100 orbital electrons, only the outer 10 electrons of the larger atoms revolve about the central nucleus as distinct and discrete bodies, intactly and compactly swinging around on precise and definite orbits. The 30 electrons nearest the centre are difficult of observation or detection as separate and organized bodies. This same comparative ratio of electronic behaviour in relation to nuclear proximity obtains in all atoms regardless of the number of electrons embraced. The nearer the nucleus, the less there is of electronic individuality. The wavelike energy extension of an electron may so spread out as to occupy the whole of the lesser atomic orbits; especially is this true of the electrons nearest the atomic nucleus.
 \vs p042 7:9 The 30 innermost orbital electrons have individuality, but their energy systems tend to intermingle, extending from electron to electron and well\hyp{}nigh from orbit to orbit. The next 30 electrons constitute the second family, or energy zone, and are of advancing individuality, bodies of matter exerting a more complete control over their attendant energy systems. The next 30 electrons, the third energy zone, are still more individualized and circulate in more distinct and definite orbits. The last 10 electrons, present in only the 10 heaviest elements, are possessed of the dignity of independence and are, therefore, able to escape more or less freely from the control of the mother nucleus. With a minimum variation in temperature and pressure, the members of this fourth and outermost group of electrons will escape from the grasp of the central nucleus, as is illustrated by the spontaneous disruption of uranium and kindred elements.
 \vs p042 7:10 The first 27 atoms, those containing from 1 to 27 orbital electrons, are more easy of comprehension than the rest. From 28 upward we encounter more and more of the unpredictability of the supposed presence of the Unqualified Absolute. But some of this electronic unpredictability is due to differential ultimatonic axial revolutionary velocities and to the unexplained “huddling” proclivity of ultimatons. Other influences --- physical, electrical, magnetic, and gravitational --- also operate to produce variable electronic behaviour. Atoms therefore are similar to persons as to predictability. Statisticians may announce laws governing a large number of either atoms or persons but not for a single individual atom or person.
@@ -181,4 +181,8 @@ J.~Jeans.
 W.F.G.~Swann.
 {``The Architecture of the Universe''}
 {\em New York: The Macmillan Company}, 1934.
+\bibitem{Dyson1952}
+F.J.~Dyson
+{\em Phys. Rev.}
+{85, 631}, 1952.
 \end{thebibliography}
